--- a/services.html
+++ b/services.html
@@ -11,6 +11,10 @@
     <div class="main">
       <div class="navbar">
         <div class="icon">
+          <img
+          src="
+          img_4510.png"
+        />
           <h2 class="logo">
             OPTIMISTIC TUTORS
             <br>
